--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,12 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.38"
+yup-oauth2 = "5.0"
+google-calendar3 = "2.0"
+hyper = { version = "0.14", features = ["full"] }
+hyper-rustls = "0.22"
+tokio = { version = "1", features = ["full"] }
+serde_json = "1.0"
+chrono-tz = "0.9.0"
+serde = "1.0.201"
+serde_derive = "1.0.201"
