Fixing typo on config

--- a/example_config.json
+++ b/example_config.json
@@ -1,5 +1,5 @@
 {
-    "calendar_id": "primery",
+    "calendar_id": "primary",
     "event_name": "Pingo Doce",
     "address": "World",
     "timezone": "Europe/Lisbon"
